samples/_failures_safe/1761270272_48af84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d6c7da3.c: In function ‘main’:
./samples/SAFE/__tmp_6d6c7da3.c:142:5: error: expected expression at end of input
  142 |     GraphOperation operations[] = {dijkstra_shortest_path,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_6d6c7da3.c:142:5: error: expected declaration or statement at end of input
